# vgindex

./: .cursorignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  mediawiki-migration.yml
docker/mediawiki/: Dockerfile  LocalSettings.php  README.md  entrypoint.sh  healthcheck.php
docker/phpbb/: Dockerfile  README.md  entrypoint.sh
docker/postgres/: init.sql
logo/: logo.af
migrations/: 001_initial_schema.sql  002_seed_data.sql  003_oauth_auth_codes.sql  003_session_csrf_token.sql  004_disc_submission_changes_original.sql  004_update_oauth_redirect_uris.sql  005_add_mexico_region.sql  006_add_archives_dirty_to_systems.sql  007_mark_archives_dirty_for_serial_version_datfiles.sql  008_optimize_homepage_recent_lists.sql  009_rename_czech_region_to_czechia.sql  010_index_submissions_public_target_reviewed.sql  011_widen_region_language_flag_codes.sql  012_optimize_discs_page.sql  013_index_disc_modification_sort.sql  014_index_disc_contents_search.sql  015_add_submission_tokens.sql  016_forum_controlled_sessions.sql  017_qualify_compact_disc_array_search.sql  018_add_draft_submission_status.sql  019_index_public_disc_history_modified.sql  020_index_ring_code_fields.sql
scripts/: fill_universal_hashes.py  generate_import_sql.py  generate_max_disc_sql.py  requirements.txt  test_fill_universal_hashes.py  test_generate_import_sql.py
scripts/backups/: create-backup.sh  restore-container.sh  restore-local.sh
scripts/deployment/: common.sh  deploy.sh  deployment.md  install-backup-timer.sh  mediawiki-migration.sh  setup-deploy-user.sh
scripts/redump_db_scraper/: scraper.cfg.example  scraper.py  test_scraper.py
scripts/redump_forum_importer/: import.php  test_importer.php
scripts/redump_forum_scraper/: scraper.cfg.example  scraper.py  test_scraper.py
scripts/redump_users_scraper/: scraper.cfg.example  scraper.py
scripts/redump_wiki_scraper/: import.sh  scrape.py
src/: config.rs  error.rs  hex_case.rs  main.rs
templates/: about.html  base.html  disc_edit.html  disc_submit.html  disc_view.html  discs.html  downloads.html  login.html  main.html  maintenance.html  queue.html  queue_detail.html  register.html  submission_detail.html  submissions.html
(+66 files in other folders)
